--- a/app/views/slurry/current/slurry-to-be-treated.html
+++ b/app/views/slurry/current/slurry-to-be-treated.html
@@ -28,7 +28,7 @@
                 </h1>
                 <div class="govuk-body govuk-!-margin-bottom-0">
                   <p id="irrigated-land-target-hint" class="govuk-hint">
-                    Enter figure in cubic metres, for example 543
+                    Enter figure in cubic metres, for example 1500
                   </p>
                 </div>
 
@@ -50,7 +50,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="app-step-nav-related app-step-nav-related--singular">
       <h2 class="app-step-nav-related__heading">
-        <span class="app-step-nav-related__pretitle">Eligibility</span>
+        <span class="app-step-nav-related__pretitle">Funding priorities</span>
         </h2>
         <p class="govuk-body">RPA wants to fund projects that:</p>
         <ul class="govuk-list govuk-list--bullet">
