--- a/app/views/slurry/v1/tenancy.html
+++ b/app/views/slurry/v1/tenancy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What is your project about?
+  Are your land or premises rented, leased or tenanted?
 {% endblock %}
 
 {% block beforeContent %}
@@ -17,16 +17,18 @@ What is your project about?
 {% endblock %}
 
 {% block content %}
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">What would you like funding for?</h1>
+<h1 class="govuk-heading-l">Is the planned project on land the farm business owns?</h1>
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukRadios({
-                  idPrefix: 'farming-type',
-                  name: 'farming-type',
+                  classes: "govuk-radios--inline",
+                  idPrefix: 'tenancy',
+                  name: 'tenancy',
                   fieldset: {
                       legend: {
                           text: '',
@@ -37,14 +39,14 @@ What is your project about?
 
                   items: [
                 {
-                  value: "Robotics and innovation",
-                  text: "Robotics and innovation",
-                  checked: checked("farming-type", "Robotics and innovation")
+                  value: "Yes",
+                  text: "Yes",
+                  checked: checked("tenancy", "Yes")
                 },
                 {
-                  value: "Slurry acidification",
-                  text: "Slurry acidification",
-                  checked: checked("farming-type", "Slurry acidification")
+                  value: "No",
+                  text: "No",
+                  checked: checked("tenancy", "No")
                 }
               ]
               }) }}
@@ -52,8 +54,22 @@ What is your project about?
           <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
+
       </form>
     </div>
-  </div>
+
+
+      <div class="govuk-grid-column-one-third">
+
+        <div class="app-step-nav-related app-step-nav-related--singular">
+          <h2 class="app-step-nav-related__heading">
+            <span class="app-step-nav-related__pretitle">Eligibility</span>
+            </h2>
+            <p>The land must be owned or have a tenancy in place until 2026 before starting the project.</p>
+            <a href="#">
+            </a>
+
+        </div>
+      </div>
 
 {% endblock %}
