landing page update

--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -42,7 +42,7 @@
                 <p class='govuk-heading-m'>Previous versions</p>
 
                 <p class='govuk-list app-list--definition'>
-                <a href='https://www.sketch.com/s/bc04f07a-1c5d-4173-8e97-941118e01749' class="govuk-link--no-visited-state" target="new">Version 1</a><br>
+                <a href='/slurry/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
                 Slurry baseline design, tested in our 1st round of usability testing between 30 Jun 2021 - 6 Jul 2021.</p>
 
 
