--- a/app/views/slurry/current/associated-works.html
+++ b/app/views/slurry/current/associated-works.html
@@ -47,12 +47,13 @@
     <div id="project-items-item-hint" class="govuk-hint govuk-checkboxes__hint">
     You must buy all 4 of the following items:
 
-        <ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
+      <p>  <ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
           <li>acid storage</li>
           <li>dosing equipment</li>
           <li>mixing tank</li>
           <li>pump</li>
         </ul>
+        </p>
 
     </div>
   </div>
