--- a/app/views/slurry/current/remaining-costs-fail.html
+++ b/app/views/slurry/current/remaining-costs-fail.html
@@ -24,7 +24,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
+      <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
 {{ govukInsetText({
     text: 'You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.'
