--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -39,8 +39,6 @@
                       <span class="govuk-body govuk-!-font-size-14"># Last updated on 14 July 2021<br/>
                       # Robotics not included</span></p>
 
-
-                
                   <p class='govuk-heading-m'>Previous versions</p>
                     <p class='govuk-list app-list--definition'>
                       <a href='/slurry/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
@@ -52,7 +50,7 @@
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
-                <p><a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626110810024/185f9759f0ba83b4513012d6b47958ecad7c2fe4?sender=uac8e5181797d9857544e5168' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
+                <a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626110810024/185f9759f0ba83b4513012d6b47958ecad7c2fe4?sender=uac8e5181797d9857544e5168' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
                     <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 14 July 2021.<br></p>
 
             <p class='govuk-heading-m'>Wireframes</p>
