--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,9 +34,14 @@
       <td class="govuk-table__cell">Eligibility and expression of interest</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="slurry">Productivity grant</a>
+      <td class="govuk-table__cell"><a href="slurry">Productivity grant - Slurry</a>
         </td>
-      <td class="govuk-table__cell">Eligibility checker</td>
+      <td class="govuk-table__cell">Eligibility checker (v2 - last updated on 14 July)</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="robotics">Productivity grant - Robotics and innovation</a>
+        </td>
+      <td class="govuk-table__cell">Eligibility checker (v1 - last updated on 16 July)</td>
     </tr>
   </tbody>
 </table>
