Slurry final  v2 iterations for UR-2

--- a/app/assets/sass/publisher.scss
+++ b/app/assets/sass/publisher.scss
@@ -9147,7 +9147,7 @@
 
 .gem-c-govspeak .call-to-action {
     margin: 2em 0;
-    background-color: #dee0e2;
+    background-color: #f3f3f1;
     padding: 2em
 }
 
