--- a/app/views/robotics/current/associated-works.html
+++ b/app/views/robotics/current/associated-works.html
@@ -35,20 +35,7 @@
           What new robotic or innovative technology does your project need?
         </h1>
       </legend>
-    <p class="govuk-hint">Equipment must have all 3 of the following functions:
-      <ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
-        <li>sensing system</li>
-        <li>decision making capability</li>
-        <li>actuators</li>
-      </ul>
-    </p>
-    <div class="govuk-warning-text">
-  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-  <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">Warning</span>
-    Equipment without these functions is unlikely to be funded.
-  </strong>
-</div>
+
 <p class="govuk-hint">Select all the items your project needs</p>
 
 <div class="govuk-checkboxes">
@@ -130,8 +117,6 @@
                       </div>
 
 
-
-
     </div>
   </fieldset>
 </div>
@@ -139,12 +124,26 @@
     </fieldset>
   </div>
 
-
 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
       </form>
-
     </div>
+
+    <!--top right column 'Funding priorities'-->
+    <div class="govuk-grid-column-one-third">
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
+          </h2>
+          <p class="govuk-body">RPA wants to fund projects that:</p>
+          <ul class="govuk-list govuk-list--bullet">
+          <li>improve productivity</li>
+          <li>improve the environment</li>
+          <li>introduce innovation</li>
+          </ul>
+
+      </div>
+      </div>
   </div>
 
 
