--- a/app/views/robotics/current/guidance.html
+++ b/app/views/robotics/current/guidance.html
@@ -1,5 +1,5 @@
 
-{% extends "./views/layouts/GUIDANCESLURRY.html" %}
+{% extends "./views/layouts/GUIDANCEROBOTICS.html" %}
 
 {% block guidance %}
 
@@ -14,7 +14,7 @@
 <p>You can apply if you:</p>
 <ul>
   <li>are in England</li>
-  <li>own the land the project will be on or have a lease for at least 5 years</li>
+  <li>own the land the project will be on or have a tenancy for at least 5 years</li>
   <li>estimate the project costs are over £87,500</li>
 
 </ul>
@@ -39,7 +39,7 @@
       <li>innovative LED lighting equipment (for example, wavelength-controlled LED lighting for crop and livestock production)</li>
     </ul>
 
-<p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million.</p>
+<p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
 
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
@@ -80,11 +80,10 @@
 
 <h2 id="how-to-apply-for-a-grant">How to apply for a grant</h2>
 <h3>Check if your project can apply for a grant</h3>
-<p class="govuk-!-padding-top-3">You need to <a href="start">check if you’re eligible and how well your project fits the funding priorities.</a></p>
 <p>You’ll need:</p>
 <ul>
-  <li>information about your business (for example number of employees, turnover)</li>
-  <li>information about the project (for example volume of slurry or digestate)</li>
+  <li>information about your business (for example, number of employees, turnover)</li>
+  <li>information about the project (for example, volume of slurry or digestate)</li>
   <li>a list of the items you’d like to buy for the project</li>
   <li>an estimate of the total cost of the items</li>
 </ul>
@@ -94,10 +93,12 @@
 <ul>
   <li>improve productivity</li>
   <li>improve the environment</li>
-  <li>improve water sustainability</li>
+  <li>introduce innovation</li>
 </ul>
 <p>When you are happy with your score, you can submit your details to the RPA.</p>
 <p>You can go back through the checker as many times as you like but you can only submit your details once.</p>
+
+<p class="call-to-action"><a href="start" class="govuk-link--no-visited-state">Check if your project can apply for a grant.</a></p>
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch once the application period opens.</p>
