--- a/app/views/robotics/current/project-impact-fail.html
+++ b/app/views/robotics/current/project-impact-fail.html
@@ -23,7 +23,7 @@
         <h1 class="govuk-heading-l">
           You cannot apply for a grant from this scheme
         </h1>
-        <p>You cannot apply for a grant if lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a dignissim libero. Mauris ac auctor felis. </p>
+        <p>Projects must achieve at least one of these outcomes to be eligible for funding.</p>
 
 
 
