--- a/app/views/slurry/current/associated-works-error.html
+++ b/app/views/slurry/current/associated-works-error.html
@@ -51,7 +51,7 @@
                     </h1>
                   </legend>
 
-                  <p class="govuk-hint">The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £1 million.<p/>
+                  <p class="govuk-hint">The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £500,000.<p/>
                   <p class="govuk-hint">Select all that apply</p>
                   <span id="mild-acidification-equipment-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> You must select mild acidification equipment
@@ -67,15 +67,15 @@
     <span id="nationality-error" class="govuk-error-message">
 
     <div id="project-items-item-hint" class="govuk-hint govuk-checkboxes__hint">
-    Your acidification equipment must include all 4 of the following items:
+    You must buy all 4 of the following items:
 
-        <ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
-          <li>acid storage</li>
-          <li>dosing equipment</li>
-          <li>mixing tank</li>
-          <li>pump</li>
-        </ul>
-
+        <p><ul class="govuk-list govuk-list--bullet govuk-hint govuk-checkboxes__hint">
+           <li>acid storage</li>
+           <li>dosing equipment</li>
+           <li>mixing tank</li>
+           <li>pump</li>
+         </ul>
+        </p>
     </div>
   </div>
 
