--- a/app/views/slurry/current/low-emission.html
+++ b/app/views/slurry/current/low-emission.html
@@ -66,9 +66,29 @@ Have you already started work on the project?
 
 
     <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
-  </form>
+   </form>
 
   </div>
+
+  <!--top right column 'Eligibility'-->
+  <div class="govuk-grid-column-one-third">
+    <div class="app-step-nav-related app-step-nav-related--singular">
+      <h2 class="app-step-nav-related__heading">
+        <span class="app-step-nav-related__pretitle">Eligibility</span>
+        </h2>
+      <p>You must use low-emission precision application equipment. </p>
+
+
+        <a href="#">
+        </a>
+
+    </div>
+    </div>
+
+
+
+
+
   </div>
 
 
