--- a/app/views/slurry/current/projects-impact.html
+++ b/app/views/slurry/current/projects-impact.html
@@ -45,12 +45,12 @@
                   items: [
                 {
                   value: "Increase acidification",
-                  text: "Increase acidification",
+                  text: "Introduce acidification for the first time",
                   checked: checked("projects-impact", "Increase acidification")
                 },
                 {
                   value: "Introduce acidification",
-                  text: "Introduce acidification",
+                  text: "Add additional acidification  installations",
                   checked: checked("projects-impact", "Introduce acidification")
                 }
               ]
