--- a/app/views/slurry/current/views/layouts/GUIDANCESLURRY.html
+++ b/app/views/slurry/current/views/layouts/GUIDANCESLURRY.html
@@ -63,11 +63,11 @@ Farming Transformation Fund slurry acidification grant
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund productivity grant
+        Farming Transformation Fund Productivity Grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Get a grant to improve economic and environmental performance and resilience through productive and innovative farming methods.</p>
+    <p class="gem-c-lead-paragraph">Get a grant for innovative farming equipment that increases productivity and improves the environment.</p>
 
   </div>
 </div>
@@ -78,7 +78,7 @@ Farming Transformation Fund slurry acidification grant
       <div class="app-c-publisher-metadata" lang="en">
         <div class="app-c-published-dates " lang="en">
           Published 21 June 2021
-          <br>Last updated 23 June 2021
+          <br>Last updated 29 July 2021
           — <a href="#history">see all updates</a>
         </div>
 
@@ -112,7 +112,7 @@ Farming Transformation Fund slurry acidification grant
     <div class="responsive-bottom-margin">
       <div class="app-c-published-dates app-c-published-dates--history" id="history" data-module="toggle" lang="en">
         Published 21 June 2021
-        <br>Last updated 23 June 20121
+        <br>Last updated 29 July 2021
         <a href="#full-history" class="app-c-published-dates__toggle" data-controls="full-history" data-expanded="false" data-toggled-text="-&nbsp;hide all updates" role="button" aria-controls="full-history" aria-expanded="false">+&nbsp;show all
           updates</a>
       </div>
