--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -27,7 +27,7 @@
 <p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
 
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-m">Strong</h2>
+      <h2 class="govuk-heading-m">Average</h2>
       <p>This means your project seems likely to be successful.</p>
     </div>
 
@@ -50,20 +50,21 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-font-size-16">
+        Average
+          </dt>
+          <dd class="govuk-summary-list__value govuk-!-font-size-16">
+           Your project seems like it’s an average fit with the funding priorities.  Based on your answers, a grant application seems like it might be successful.
+          </dd>
+          </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key govuk-!-font-size-16">
           Weak
           </dt>
           <dd class="govuk-summary-list__value govuk-!-font-size-16">
-            Your project seems like it’s an average fit with the funding priorities.  Based on your answers, a grant application seems like it might be successful. 
+              Your project seems like it’s a weak fit with the funding priorities.  Based on your answers, a grant application seems unlikely to be successful.  
           </dd>
           </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key govuk-!-font-size-16">
-          Average
-            </dt>
-            <dd class="govuk-summary-list__value govuk-!-font-size-16">
-              Your project seems like it’s a weak fit with the funding priorities.  Based on your answers, a grant application seems unlikely to be successful.  
-            </dd>
-            </div>
+
 
   </dl>
 </div>
