--- a/app/views/slurry/current/associated-works.html
+++ b/app/views/slurry/current/associated-works.html
@@ -35,7 +35,7 @@
       Which eligible items does your project need?
         </h1>
       </legend>
-<p class="govuk-hint">The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £1 million.<p/>
+<p class="govuk-hint">The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £500,000.<p/>
 <p class="govuk-hint">Select all that apply</p>
 
 <div class="govuk-checkboxes">
