--- a/app/views/slurry/current/project-cost-fail.html
+++ b/app/views/slurry/current/project-cost-fail.html
@@ -29,7 +29,7 @@
     </div>
 
 {{ govukInsetText({
-    text: 'The minimum grant you can apply for is £35,000 (40% of £87,500). The maximum grant is £1 million.'
+    text: 'The minimum grant you can apply for is £35,000 (40% of £87,500). The maximum grant is £500,000.'
 }) }}
 
 <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19"> See other grants you may be eligible for.</a><p>
