--- a/app/views/robotics/current/water-SSSI.html
+++ b/app/views/robotics/current/water-SSSI.html
@@ -21,11 +21,11 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-l">
-            Does the project directly impact a site of Special Scientific Interest?
+            Does the project directly impact a Site of Special Scientific Interest?
             </h1>
           </div>
         </div>
-        
+
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="water-SSSI" name="water-SSSI" type="radio" value="Yes" {{ checked("water-SSSI", "Yes") }}>
