--- a/app/views/robotics/current/wider-farming.html
+++ b/app/views/robotics/current/wider-farming.html
@@ -24,27 +24,27 @@ Have you already started work on the project?
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">
-            Will this project fit within your wider farming operations?
+            Will your project use data analytics to improve productivity on the farm?  
           </h1>
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="wider-farming-1" name="wider-farming" type="radio" value="yes project fits" {{ checked("wider-farming", "yes project fits") }}>
             <label class="govuk-label govuk-radios__label" for="wider-farming-1">
-              Yes, this project will fit into the existing farming operations
+              Yes, we have the technology already
             </label>
           </div>
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="wider-farming-2" name="wider-farming" type="radio" value="yes buying tech that fits" {{ checked("wider-farming", "yes buying tech that fits") }}>
             <label class="govuk-label govuk-radios__label" for="wider-farming-2">
-            Yes, project costs will include the technology required to ensure that it fits in into the wider farming operations
+            Yes, we’ll buy the technology as part of the project
             </label>
           </div>
-       <div class="govuk-radios__divider">or</div>
+
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="lwider-farming-3" name="wider-farming" type="radio" value="no" {{ checked("wider-farming", "no") }}>
+            <input class="govuk-radios__input" id="lwider-farming-3" name="wider-farming" type="radio" value="No" {{ checked("wider-farming", "No") }}>
             <label class="govuk-label govuk-radios__label" for="wider-farming-3">
-              No, this project will not fit into my wider farming operations
+              No, we will not use any data analytics
             </label>
           </div>
         </div>
@@ -58,14 +58,10 @@ Have you already started work on the project?
   <div class="govuk-grid-column-one-third">
     <div class="app-step-nav-related app-step-nav-related--singular">
       <h2 class="app-step-nav-related__heading">
-        <span class="app-step-nav-related__pretitle">Funding priorities</span>
+        <span class="app-step-nav-related__pretitle">Eligibility</span>
         </h2>
-        <p class="govuk-body">RPA wants to fund projects that:</p>
-        <ul class="govuk-list govuk-list--bullet">
-        <li>improve productivity</li>
-        <li>improve the environment</li>
-        <li>introduce innovation</li>
-        </ul>
+        <p class="govuk-body">Your project must use data analytics.</p>
+
     </div>
     </div>
   </div>
