--- a/app/views/robotics/current/introducing-innovation.html
+++ b/app/views/robotics/current/introducing-innovation.html
@@ -16,43 +16,45 @@
 {% endblock %}
 
 {% block content %}
- <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
     <div class="govuk-form-group">
-
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-                Have you used this technology on your farm before?
+                Are you using this technology on your farm?
             </h1>
           </legend>
 
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="introducing-innovation-1" name="introducing-innovation" type="radio" value="Yes" {{ checked("introducing-innovation", "Yes") }}>
+              <input class="govuk-radios__input" id="introducing-innovation-1" name="introducing-innovation" type="radio" value="Yes, we’re using it now" {{ checked("introducing-innovation", "Yes, we’re using it now") }}>
               <label class="govuk-label govuk-radios__label" for="introducing-innovation-1">
-                Yes
+                Yes, we’re using it now
               </label>
             </div>
+            <div class="govuk-radios govuk-radios--inline">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="introducing-innovation-2" name="introducing-innovation" type="radio" value="Yes, as a pilot, demonstration or trial" {{ checked("introducing-innovation", "Yes, as a pilot, demonstration or trial") }}>
+                <label class="govuk-label govuk-radios__label" for="introducing-innovation-2">
+                  Yes, as a pilot, demonstration or trial
+                </label>
+              </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="introducing-innovation-2" name="introducing-innovation" type="radio" value="No" {{ checked("introducing-innovation", "No") }}>
-              <label class="govuk-label govuk-radios__label" for="introducing-innovation-2">
-                No
+              <input class="govuk-radios__input" id="introducing-innovation-3" name="introducing-innovation" type="radio" value="No, we haven’t used it yet" {{ checked("introducing-innovation", "No, we haven’t used it yet") }}>
+              <label class="govuk-label govuk-radios__label" for="introducing-innovation-3">
+                No, we haven’t used it yet
               </label>
-
             </div>
               </div>
-
-
+            </div>
           </div>
 
-
-
-        <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Get your score</button>
-
+  </form>
   </div>
-    </form>
+
     <div class="govuk-grid-column-one-third">
 
       <div class="app-step-nav-related app-step-nav-related--singular">
