--- a/app/views/robotics/current/wider-farming-fail.html
+++ b/app/views/robotics/current/wider-farming-fail.html
@@ -13,7 +13,7 @@
   html: 'This is a prototype. It is not a real service.'
 }) }}
 
-  <a class="govuk-back-link" href="low-emission">Back</a>
+  <a class="govuk-back-link" href="wider-farming">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -25,7 +25,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p>You cannot apply for a grant if you will not be using low emission precision application equipment. </p>
+      <p>You cannot apply for a grant if your project does not use data analytics.</p>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
     </p></div>
   </div>
