--- a/app/views/slurry/current/water-SSSI.html
+++ b/app/views/slurry/current/water-SSSI.html
@@ -21,7 +21,7 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-                Does the project directly impact a Site <br> of Special Scientific Interest?
+                Does the project directly impact a Site of Special Scientific Interest?
             </h1>
           </legend>
           <br><br>
